--- a/.env
+++ b/.env
@@ -29,15 +29,15 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=email-smtp.us-east-1.amazonaws.com
+MAIL_HOST=
 MAIL_PORT=587
-MAIL_USERNAME=AKIAYS2NQXXWL5L4OS66
-MAIL_PASSWORD=BB9qwZige0t+UfwzgHU4wVIeRsfoHySzXTO6LQS062yj
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=nguyenducphap2000@gmail.com
+MAIL_FROM_ADDRESS=
 
-AWS_ACCESS_KEY_ID=AKIAYS2NQXXWJJLGG7IB
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
